--- a/styles/stylee.css
+++ b/styles/stylee.css
@@ -211,7 +211,6 @@
 }
 
 .MeoRe-Secqcia {
-    display: flex;
     width: 100%;
     background-color: #FF7420;
 }
@@ -224,6 +223,206 @@
     text-align: left;
     color: #191A19;
 }
-.first-sTrings{
+
+
+.allWorkuts {
+    position: relative;
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: left;
+    color: black;
+
+}
+
+.allWorkuts::after {
+    content: '';
+    position: absolute;
+    width: 110%;
+    height: 2px;
+    background-color: #030303;
+    bottom: -10px;
+    transform: translateX(-92%);
+}
+
+::selection {
+    color: aliceblue;
+}
+
+.aTegs {
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.seconD-Navmen {
+    display: flex;
+    column-gap: 14px;
+}
+
+.first-sTrings {
+    display: flex;
+    align-items: center;
+    width: 90%;
+    justify-content: space-between;
+    margin: auto;
     padding-top: 54px;
+
+}
+
+.divSection-N3 {
+    width: 90%;
+    margin: auto;
+    padding-top: 49px;
+    display: flex;
+    column-gap: 18px;
+    flex-wrap: nowrap;
+}
+
+.firtFoto-div {
+    position: relative;
+    width: 35%;
+}
+
+.first-foto {
+    width: 100%;
+    display: block;
+}
+
+.firtFOtos-strings {
+    width: 100%;
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.frstfotos-ptegs {
+    font-family: Poppins, sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+    color: #FFFFFF;
+    text-align: center;
+    align-items: center;
+}
+
+
+.secoomFoto-Div {
+    width: 35%;
+    position: relative;
+    text-align: center;
+}
+
+.mere-foto {
+    display: block;
+    width: 100%;
+}
+
+.secondDIv-strings {
+    width: 100%;
+    position: absolute;
+    top: 85%;
+    transform: translate(-50% -50%);
+
+}
+
+.seconDiv-string {
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+    text-align: center;
+    color: #FFFFFF;
+    align-items: center;
+}
+
+.meotxe-divFto {
+    width: 35%;
+    position: relative;
+    text-align: center;
+}
+
+.mesame-Foto {
+    width: 100%;
+    display: block;
+}
+
+.meotxediVs-strings {
+    width: 1005;
+    position: absolute;
+    transform: translate(50% 50%);
+    top: 85%;
+    left: 30%;
+}
+
+.meotxeDivs-strngBoyz {
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+    text-align: center;
+    color: #FFFFFF;
+    align-items: center;
+}
+
+.big-mainQshen {
+    width: 100%;
+    background: #191A19;
+}
+
+.whatOirr {
+    font-family: Poppins;
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 42px;
+    color: #FF7420;
+}
+
+.lamverY {
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+    color: #FFFFFF;
+    width: 60%;
+    margin-top: 28px;
+
+}
+
+.team2-DIv {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    margin-top: 14px;
+}
+
+.tamN2 {
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+
+.big-FiestsectIonString {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 39px;
+}
+
+.ladingwaY {
+    font-family: Poppins;
+    font-size: 64px;
+    font-weight: 600;
+    line-height: 96px;
+    color: #FFFFFF;
+    margin-top: 91px
 }
